--- a/src/app/tic-tac-toe/tic-tac-toe.component.html
+++ b/src/app/tic-tac-toe/tic-tac-toe.component.html
@@ -1,20 +1,20 @@
-<p>Jogafor atual: {{currentPlayer}}</p>
+<p>Jogador atual: {{currentPlayer}}</p>
 <p>Vencedor: {{winner}}</p>
 <table>
     <tr>
-        <td (click)="processPlay(0, 0)">{{bord[0][0]}}</td>
-        <td (click)="processPlay(0, 1)">{{bord[0][1]}}</td>
-        <td (click)="processPlay(0, 2)">{{bord[0][2]}}</td>
+        <td (click)="processPlay(0, 0)">{{board[0][0]}}</td>
+        <td (click)="processPlay(0, 1)">{{board[0][1]}}</td>
+        <td (click)="processPlay(0, 2)">{{board[0][2]}}</td>
     </tr>
     <tr>
-        <td (click)="processPlay(1, 0)">{{bord[1][0]}}</td>
-        <td (click)="processPlay(1, 1)">{{bord[1][1]}}</td>
-        <td (click)="processPlay(1, 2)">{{bord[1][2]}}</td>
+        <td (click)="processPlay(1, 0)">{{board[1][0]}}</td>
+        <td (click)="processPlay(1, 1)">{{board[1][1]}}</td>
+        <td (click)="processPlay(1, 2)">{{board[1][2]}}</td>
     </tr>
     <tr>
-        <td (click)="processPlay(2, 0)">{{bord[2][0]}}</td>
-        <td (click)="processPlay(2, 1)">{{bord[2][1]}}</td>
-        <td (click)="processPlay(2, 2)">{{bord[2][2]}}</td>
+        <td (click)="processPlay(2, 0)">{{board[2][0]}}</td>
+        <td (click)="processPlay(2, 1)">{{board[2][1]}}</td>
+        <td (click)="processPlay(2, 2)">{{board[2][2]}}</td>
     </tr>
 </table>
-<p><button>Reiniciar Partida</button></p>
+<p><button (click)="reset()">Reiniciar Partida</button></p>
