--- a/src/app/tic-tac-toe/tic-tac-toe.component.html
+++ b/src/app/tic-tac-toe/tic-tac-toe.component.html
@@ -1,20 +1,8 @@
 <p>Jogador atual: {{currentPlayer}}</p>
 <p>Vencedor: {{winner}}</p>
 <table>
-    <tr>
-        <td (click)="processPlay(0, 0)">{{board[0][0]}}</td>
-        <td (click)="processPlay(0, 1)">{{board[0][1]}}</td>
-        <td (click)="processPlay(0, 2)">{{board[0][2]}}</td>
-    </tr>
-    <tr>
-        <td (click)="processPlay(1, 0)">{{board[1][0]}}</td>
-        <td (click)="processPlay(1, 1)">{{board[1][1]}}</td>
-        <td (click)="processPlay(1, 2)">{{board[1][2]}}</td>
-    </tr>
-    <tr>
-        <td (click)="processPlay(2, 0)">{{board[2][0]}}</td>
-        <td (click)="processPlay(2, 1)">{{board[2][1]}}</td>
-        <td (click)="processPlay(2, 2)">{{board[2][2]}}</td>
+    <tr *ngFor="let i of [0,1,2]">
+        <td *ngFor="let j of [0,1,2]" (click)="processPlay(i, j)">{{board[i][j]}}</td>
     </tr>
 </table>
 <p><button (click)="reset()">Reiniciar Partida</button></p>
